--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,6 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-
+data
 # Dependency directories (remove the comment below to include it)
 # vendor/
